Added some structure and styling

--- a/OHack.html
+++ b/OHack.html
@@ -1,14 +1,29 @@
 <head>
-  <title>ICAN AZ</title>
+  <title>ICAN AZ App</title>
 </head>
 
 <body>
-  <h1>Welcome to Meteor!</h1>
-
-  {{> hello}}
+  <div class = "header">
+    <img src="http://www.taohealingcenters.org/images/ican.jpg" alt="ICAN Logo"/>
+  </div>
+  <div class = "nav" id = "inactive">
+    <ul>
+      <li>
+        <a href="*">Home</a>
+      </li>
+      <li>
+        <a href = "*"> About </a>
+      </li>
+      <li>
+        <a href = "*">News</a>
+      </li>
+      <li>
+        <a href = "*">Calendar</a>
+      </li>
+    </ul>
+  </div>
 </body>
 
-<template name="hello">
-  <button>Click Me</button>
-  <p>You've pressed the button {{counter}} times.</p>
+<template name="menu click">
+
 </template>
