--- a/OHack.html
+++ b/OHack.html
@@ -9,16 +9,16 @@
   <div class = "nav">
     <ul>
       <li>
-        <a href="*">Home</a>
+        <a href="*" id = "homeButton">Home</a>
       </li>
       <li>
-        <a href = "*"> About </a>
+        <a href = "*" id = "newsButton">News</a>
       </li>
       <li>
-        <a href = "*">News</a>
+        <a href = "*" id = "calendarButton">Calendar</a>
       </li>
       <li>
-        <a href = "*">Calendar</a>
+        <a href = "*" id = "contactButton">Contact Information</a>
       </li>
     </ul>
   </div>
