Modified Styling and added Espanol link

--- a/OHack.html
+++ b/OHack.html
@@ -20,6 +20,9 @@
       <li>
         <a href = "*" id = "contactButton">Contact Information</a>
       </li>
+      <li>
+        Español
+      </li>
     </ul>
   </div>
 </body>
