Changed Espanol to a link

--- a/OHack.html
+++ b/OHack.html
@@ -21,7 +21,7 @@
         <a href = "*" id = "contactButton">Contact Information</a>
       </li>
       <li>
-        Español
+        <a href= "*" id="spanish">Español</a>
       </li>
     </ul>
   </div>
