--- a/OHack.html
+++ b/OHack.html
@@ -5,6 +5,10 @@
 <body>
   <div class = "header">
     <img src="http://www.taohealingcenters.org/images/ican.jpg" alt="ICAN Logo"/>
+    <link rel = "stylesheet" href = "http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <script src = "https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js">
+    </script>
+    <script src = "http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   </div>
   <div class = "nav">
     <ul>
