Added fb and twitter

--- a/OHack.html
+++ b/OHack.html
@@ -3,6 +3,10 @@
 </head>
 
 <body>
+  <div class="notificationBox">
+    <h1> Notifications
+    </h1>
+  </div>
   <div class = "header">
     <img src="http://www.taohealingcenters.org/images/ican.jpg" alt="ICAN Logo"/>
   </div>
@@ -24,6 +28,12 @@
         <a href= "*" id="spanish">Español</a>
       </li>
     </ul>
+  </div>
+   <div>
+    <img src="https://cdn0.iconfinder.com/data/icons/social-flat-rounded-rects/512/facebook-256.png" alt="facebookThumbnail"/>
+  </div>
+  <div>
+    <img src="http://www.ride24hr.com/uploads/twitter-icon2.png" alt="twitterThumbnail"/>
   </div>
 </body>
 
