Adjusted merge. Fixed header with notifactions box

--- a/OHack.html
+++ b/OHack.html
@@ -4,83 +4,69 @@
 </head>
 
 <body>
-<<<<<<< HEAD
-  <div class="notificationBox">
-    <h1> Notifications
-    </h1>
-  </div>
-  <div class = "header">
-    <img src="http://www.taohealingcenters.org/images/ican.jpg" alt="ICAN Logo"/>
-  </div>
-  <div class = "nav">
-    <ul>
-      <li>
-        <a href="*" id = "homeButton">Home</a>
-      </li>
-      <li>
-        <a href = "*" id = "newsButton">News</a>
-      </li>
-      <li>
-        <a href = "*" id = "calendarButton">Calendar</a>
-      </li>
-      <li>
-        <a href = "*" id = "contactButton">Contact Information</a>
-      </li>
-      <li>
-        <a href= "*" id="spanish">Español</a>
-      </li>
-    </ul>
-  </div>
-   <div>
-    <img src="https://cdn0.iconfinder.com/data/icons/social-flat-rounded-rects/512/facebook-256.png" alt="facebookThumbnail"/>
-  </div>
-  <div>
-    <img src="http://www.ride24hr.com/uploads/twitter-icon2.png" alt="twitterThumbnail"/>
-  </div>
-=======
+  <link rel = "stylesheet" href = "http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <script src = "https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js">
+  </script>
+  <script src = "http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+
+
+
+
+
   <div class = "container-fluid">
-    <div class = "header">
-      <img src="http://www.taohealingcenters.org/images/ican.jpg" alt="ICAN Logo"/>
-      <link rel = "stylesheet" href = "http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-      <script src = "https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js">
-      </script>
-      <script src = "http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <div class = "row">
+      <div class = "col-xs-4">
+        <div class = "header">
+          <img src="http://www.taohealingcenters.org/images/ican.jpg" alt="ICAN Logo"/>
+
+        </div>
+      </div>
+      <div class = "col-xs-8">
+        <div class="notificationBox">
+          <h1> Notifications
+          </h1>
+        </div>
+      </div>
     </div>
     <div class = "row">
-    <div class = "nav">
-      <ul>
-        <div class = "col-xs-3">
-        <li>
-          <a href="*" id = "homeButton">Home</a>
-        </li>
+      <div class = "nav">
+        <ul>
+          <div class = "col-xs-3">
+            <li>
+              <a href="*" id = "homeButton">Home</a>
+            </li>
+          </div>
+          <div class = "col-xs-3">
+            <li>
+              <a href = "*" id = "newsButton">News</a>
+            </li>
+          </div>
+          <div class = "col-xs-3">
+            <li>
+              <a href = "*" id = "calendarButton">Calendar</a>
+            </li>
+          </div>
+          <div class = "col-xs-3">
+            <li>
+              <a href = "*" id = "contactButton">Contact Information</a>
+            </li>
+          </div>
+          <div class = "row">
+            <div class = "col-xs-3">
+              <li>
+                Español
+              </li>
+            </div>
+          </div>
+        </ul>
       </div>
-      <div class = "col-xs-3">
-        <li>
-          <a href = "*" id = "newsButton">News</a>
-        </li>
-      </div>
-      <div class = "col-xs-3">
-        <li>
-          <a href = "*" id = "calendarButton">Calendar</a>
-        </li>
-      </div>
-      <div class = "col-xs-3">
-        <li>
-          <a href = "*" id = "contactButton">Contact Information</a>
-        </li>
-      </div>
-      <div class = "row">
-      <div class = "col-xs-3">
-        <li>
-          Español
-        </li>
-      </div>
-    </div>
-      </ul>
     </div>
   </div>
-</div>
->>>>>>> origin/master
+
+  <div class = "footer">
+    <img src="https://cdn0.iconfinder.com/data/icons/social-flat-rounded-rects/512/facebook-256.png" alt="facebookThumbnail"/>
+    <img src="http://www.ride24hr.com/uploads/twitter-icon2.png" alt="twitterThumbnail"/>
+  </div>
 </body>
 
 <template name="menu click">
