--- a/OHack.html
+++ b/OHack.html
@@ -64,8 +64,8 @@
   </div>
 
   <div class = "footer">
-    <img src="https://cdn0.iconfinder.com/data/icons/social-flat-rounded-rects/512/facebook-256.png" alt="facebookThumbnail"/>
-    <img src="http://www.ride24hr.com/uploads/twitter-icon2.png" alt="twitterThumbnail"/>
+    <img src="https://cdn0.iconfinder.com/data/icons/social-flat-rounded-rects/512/facebook-256.png" alt="facebookThumbnail" style = "width: 50px; height: 50px;"/>
+    <img src="http://www.ride24hr.com/uploads/twitter-icon2.png" alt="twitterThumbnail" style = "width: 50px; height: 50px;"/>
   </div>
 </body>
 
