--- a/OHack.html
+++ b/OHack.html
@@ -58,10 +58,16 @@
       </div>
     </div>
   </div>
-</div>
 
-  <div class = "footer">
-    <img src="https://cdn0.iconfinder.com/data/icons/social-flat-rounded-rects/512/facebook-256.png" alt="facebookThumbnail" style = "width: 50px; height: 50px;"/>
-    <img src="http://www.ride24hr.com/uploads/twitter-icon2.png" alt="twitterThumbnail" style = "width: 50px; height: 50px;"/>
-  </div>
+
+  <nav class = "navbar navbar-default navbar-fixed-bottom">
+    <ul class = "nav navbar-nav">
+      <li>
+        <img src="https://cdn0.iconfinder.com/data/icons/social-flat-rounded-rects/512/facebook-256.png" alt="facebookThumbnail" style = "width: 50px; height: 50px;"/>
+      </li>
+      <li>
+        <img src="http://www.ride24hr.com/uploads/twitter-icon2.png" alt="twitterThumbnail" style = "width: 50px; height: 50px;"/>
+      </li>
+    </ul>
+  </nav>
 </body>
