--- a/OHack.html
+++ b/OHack.html
@@ -24,50 +24,40 @@
         </div>
       </div>
     </div>
-    <div class = "row">
-      <div class = "nav">
-        <ul>
-          <div class = "col-xs-3">
-            <li>
-              <a href="*" id = "homeButton">Home</a>
-            </li>
-          </div>
-          <div class = "col-xs-3">
-            <li>
-              <a href = "*" id = "newsButton">News</a>
-            </li>
-          </div>
-          <div class = "col-xs-3">
-            <li>
-              <a href = "*" id = "calendarButton">Calendar</a>
-            </li>
-          </div>
-          <div class = "col-xs-3">
-            <li>
-              <a href = "*" id = "contactButton">Contact Information</a>
-            </li>
-          </div>
-          <div class = "row">
-            <div class = "col-xs-3">
-              <li>
-                <a href= "*" id="spanish">Español</a>
-              </li>
-            </div>
-          </div>
-        </ul>
-      </div>
-    </div>
+    <nav class = "navbar navbar-default">
+      <ul class = "nav navbar-nav">
+        <li id = "homeButton">
+          <a href="*">Home</a>
+        </li>
+        <li id = "newsButton">
+          <a href = "*">News</a>
+        </li>
+        <li id = "calendarButton">
+          <a href = "*">Calendar</a>
+        </li>
+        <li id = "contactButton">
+          <a href = "*">Contact Information</a>
+        </li>
+        <li id="spanish">
+          <a href= "*">Español</a>
+        </li>
+      </ul>
+    </nav>
+
+
+    <nav class = "navbar navbar-default navbar-fixed-bottom">
+      <ul class = "nav navbar-nav">
+        <li>
+          <a href = "">
+            <img src="https://cdn0.iconfinder.com/data/icons/social-flat-rounded-rects/512/facebook-256.png" alt="facebookThumbnail" style = "width: 50px; height: 50px;"/>
+          </a>
+        </li>
+        <li>
+          <a href = "">
+            <img src="http://www.ride24hr.com/uploads/twitter-icon2.png" alt="twitterThumbnail" style = "width: 50px; height: 50px;"/>
+          </a>
+        </li>
+      </ul>
+    </nav>
   </div>
-
-
-  <nav class = "navbar navbar-default navbar-fixed-bottom">
-    <ul class = "nav navbar-nav">
-      <li>
-        <img src="https://cdn0.iconfinder.com/data/icons/social-flat-rounded-rects/512/facebook-256.png" alt="facebookThumbnail" style = "width: 50px; height: 50px;"/>
-      </li>
-      <li>
-        <img src="http://www.ride24hr.com/uploads/twitter-icon2.png" alt="twitterThumbnail" style = "width: 50px; height: 50px;"/>
-      </li>
-    </ul>
-  </nav>
 </body>
