Hipster lorem ipsum. The best addition of them all

--- a/OHack.html
+++ b/OHack.html
@@ -38,22 +38,32 @@
         <li id = "contactButton">
           <a href = "*">Contact Information</a>
         </li>
-        <li id="spanish">
+        <li>
           <a href= "*">Español</a>
         </li>
       </ul>
     </nav>
 
+    <p>90's cardigan narwhal, High Life fingerstache plaid letterpress actually direct trade Austin butcher salvia health goth fanny pack viral. +1 forage cliche, yr bespoke single-origin coffee small batch Williamsburg salvia. Shabby chic cronut seitan literally mlkshk Portland. Post-ironic Intelligentsia keffiyeh American Apparel actually. Banksy butcher brunch 3 wolf moon food truck, cliche jean shorts tofu lumbersexual next level fanny pack pour-over 8-bit. Readymade artisan Odd Future skateboard vinyl. Quinoa Vice small batch, put a bird on it stumptown fashion axe salvia wolf.
+    </p>
 
+    <p> Skateboard Shoreditch readymade Helvetica, artisan flannel iPhone chia vinyl drinking vinegar McSweeney's four dollar toast freegan Schlitz four loko. Beard before they sold out retro freegan. Try-hard tilde squid chambray bitters. XOXO Williamsburg shabby chic, mlkshk vinyl four dollar toast pug. VHS tote bag lomo, raw denim keffiyeh Pinterest lo-fi pickled wayfarers cred Intelligentsia. Direct trade tote bag literally, 3 wolf moon shabby chic Kickstarter cronut listicle beard chambray messenger bag meggings disrupt. Carles tilde Williamsburg synth cardigan, Banksy Etsy lo-fi try-hard tofu authentic mixtape.
+    </p>
+
+    <p> Mumblecore Austin Pitchfork crucifix Thundercats. Health goth bicycle rights church-key, pug banjo synth Vice pour-over single-origin coffee taxidermy slow-carb vegan. Disrupt retro art party health goth hashtag. Trust fund wayfarers American Apparel keffiyeh, retro gentrify DIY actually mumblecore dreamcatcher bicycle rights squid farm-to-table Blue Bottle asymmetrical. Messenger bag semiotics Williamsburg, pug fap organic typewriter lo-fi actually banh mi. Actually pug forage, plaid health goth normcore banjo Bushwick art party. Seitan meh hashtag drinking vinegar Wes Anderson jean shorts.
+    </p>
+
+    <p>Slow-carb readymade tattooed, skateboard try-hard PBR&B Shoreditch whatever YOLO American Apparel. Leggings listicle ennui bicycle rights, before they sold out fingerstache asymmetrical church-key locavore next level pop-up cliche gluten-free farm-to-table kogi. Deep v bicycle rights heirloom, put a bird on it kale chips mustache artisan DIY. Photo booth vegan craft beer quinoa bicycle rights fashion axe, scenester Bushwick pop-up selvage lumbersexual art party. Small batch cornhole ennui wayfarers art party, semiotics church-key swag umami biodiesel food truck. Biodiesel cray pickled shabby chic, taxidermy freegan semiotics tote bag. Craft beer next level selfies, four dollar toast lo-fi swag ethical literally retro crucifix tofu hella.
+    </p>
     <nav class = "navbar navbar-default navbar-fixed-bottom">
       <ul class = "nav navbar-nav">
         <li>
-          <a href = "">
+          <a href = "https://www.facebook.com/ICANAZ?fref=ts">
             <img src="https://cdn0.iconfinder.com/data/icons/social-flat-rounded-rects/512/facebook-256.png" alt="facebookThumbnail" style = "width: 50px; height: 50px;"/>
           </a>
         </li>
         <li>
-          <a href = "">
+          <a href = "https://twitter.com/icanchandler">
             <img src="http://www.ride24hr.com/uploads/twitter-icon2.png" alt="twitterThumbnail" style = "width: 50px; height: 50px;"/>
           </a>
         </li>
