added the thing

--- a/OHack.html
+++ b/OHack.html
@@ -43,7 +43,8 @@
         </li>
       </ul>
     </nav>
-
+    <a class="twitter-timeline" href="https://twitter.com/ICANChandler" data-widget-id="653043193957629952">Tweets by @ICANChandler</a>
+    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
     <p>90's cardigan narwhal, High Life fingerstache plaid letterpress actually direct trade Austin butcher salvia health goth fanny pack viral. +1 forage cliche, yr bespoke single-origin coffee small batch Williamsburg salvia. Shabby chic cronut seitan literally mlkshk Portland. Post-ironic Intelligentsia keffiyeh American Apparel actually. Banksy butcher brunch 3 wolf moon food truck, cliche jean shorts tofu lumbersexual next level fanny pack pour-over 8-bit. Readymade artisan Odd Future skateboard vinyl. Quinoa Vice small batch, put a bird on it stumptown fashion axe salvia wolf.
     </p>
 
