--- a/OHack.html
+++ b/OHack.html
@@ -44,10 +44,10 @@
       </ul>
     </nav>
     <a class="twitter-timeline" href="https://twitter.com/ICANChandler"
-     data-widget-id="653046356978741248">
-     data-tweet-limit="3">
+     data-widget-id="653046356978741248"
+     width="auto"
+     height="400">
      Tweets by @ICANChandler
-
     </a>
     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
