Removed sample <p> added likely content found on page

--- a/OHack.html
+++ b/OHack.html
@@ -51,19 +51,14 @@
     </a>
     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-    <p>90's cardigan narwhal, High Life fingerstache plaid letterpress actually direct trade Austin butcher salvia health goth fanny pack viral. +1 forage cliche, yr bespoke single-origin coffee small batch Williamsburg salvia. Shabby chic cronut seitan literally mlkshk Portland. Post-ironic Intelligentsia keffiyeh American Apparel actually. Banksy butcher brunch 3 wolf moon food truck, cliche jean shorts tofu lumbersexual next level fanny pack pour-over 8-bit. Readymade artisan Odd Future skateboard vinyl. Quinoa Vice small batch, put a bird on it stumptown fashion axe salvia wolf.
+    <p>ICAN is a free, family-centered youth service in the East Valley providing a full complement of programs proven effective in equipping youth to achieve personal and academic success by tackling substance abuse, gang involvement and juvenile delinquency.
     </p>
 
     <p></p>
-    <p> Skateboard Shoreditch readymade Helvetica, artisan flannel iPhone chia vinyl drinking vinegar McSweeney's four dollar toast freegan Schlitz four loko. Beard before they sold out retro freegan. Try-hard tilde squid chambray bitters. XOXO Williamsburg shabby chic, mlkshk vinyl four dollar toast pug. VHS tote bag lomo, raw denim keffiyeh Pinterest lo-fi pickled wayfarers cred Intelligentsia. Direct trade tote bag literally, 3 wolf moon shabby chic Kickstarter cronut listicle beard chambray messenger bag meggings disrupt. Carles tilde Williamsburg synth cardigan, Banksy Etsy lo-fi try-hard tofu authentic mixtape.
+    <p>ICAN goes beyond being just an after-school program for at-risk youth. ICAN works with youth on the critical skills they need to be productive and responsible members of the community.
     </p>
-
-    <p></p>
-    <p> Mumblecore Austin Pitchfork crucifix Thundercats. Health goth bicycle rights church-key, pug banjo synth Vice pour-over single-origin coffee taxidermy slow-carb vegan. Disrupt retro art party health goth hashtag. Trust fund wayfarers American Apparel keffiyeh, retro gentrify DIY actually mumblecore dreamcatcher bicycle rights squid farm-to-table Blue Bottle asymmetrical. Messenger bag semiotics Williamsburg, pug fap organic typewriter lo-fi actually banh mi. Actually pug forage, plaid health goth normcore banjo Bushwick art party. Seitan meh hashtag drinking vinegar Wes Anderson jean shorts.
-    </p>
-
-    <p></p>
-    <p>Slow-carb readymade tattooed, skateboard try-hard PBR&B Shoreditch whatever YOLO American Apparel. Leggings listicle ennui bicycle rights, before they sold out fingerstache asymmetrical church-key locavore next level pop-up cliche gluten-free farm-to-table kogi. Deep v bicycle rights heirloom, put a bird on it kale chips mustache artisan DIY. Photo booth vegan craft beer quinoa bicycle rights fashion axe, scenester Bushwick pop-up selvage lumbersexual art party. Small batch cornhole ennui wayfarers art party, semiotics church-key swag umami biodiesel food truck. Biodiesel cray pickled shabby chic, taxidermy freegan semiotics tote bag. Craft beer next level selfies, four dollar toast lo-fi swag ethical literally retro crucifix tofu hella.
+    <p>8 out of 10 young people in the areas we serve are living in extreme poverty. Four of those children will go to bed hungry at night and eight will be using drugs or alcohol to cope with the harsh realities they face. Joining gangs becomes a more viable choice than graduation in the community we serve.
+This is not an option for ICAN. We exist to combat these issues and build strong futures for them and for our community.
     </p>
     <nav class = "navbar navbar-default navbar-fixed-bottom">
       <ul class = "nav navbar-nav">
