Changed notifications area

--- a/OHack.html
+++ b/OHack.html
@@ -11,19 +11,18 @@
 
   <div class = "container-fluid">
     <div class = "row">
-      <div class = "col-xs-4">
+      <div class = "col-md-3 col-xs-6">
         <div class = "header">
           <img src="http://www.taohealingcenters.org/images/ican.jpg" alt="ICAN Logo"/>
-
         </div>
-      </div>
-      <div class = "col-xs-8">
+        </div>
+        <div class = "col-md-4 col-xs-4">
         <div class="notificationBox">
-          <h1> Notifications
-          </h1>
+          <p style = "font-size: 10px"> Notifications:
+          </p>
         </div>
       </div>
-    </div>
+      </div>
     <nav class = "navbar navbar-default">
       <ul class = "nav navbar-nav">
         <li id = "homeButton">
@@ -59,7 +58,7 @@
     <p></p>
     <p>Slow-carb readymade tattooed, skateboard try-hard PBR&B Shoreditch whatever YOLO American Apparel. Leggings listicle ennui bicycle rights, before they sold out fingerstache asymmetrical church-key locavore next level pop-up cliche gluten-free farm-to-table kogi. Deep v bicycle rights heirloom, put a bird on it kale chips mustache artisan DIY. Photo booth vegan craft beer quinoa bicycle rights fashion axe, scenester Bushwick pop-up selvage lumbersexual art party. Small batch cornhole ennui wayfarers art party, semiotics church-key swag umami biodiesel food truck. Biodiesel cray pickled shabby chic, taxidermy freegan semiotics tote bag. Craft beer next level selfies, four dollar toast lo-fi swag ethical literally retro crucifix tofu hella.
     </p>
-    <nav class = "navbar navbar-default navbar-fixed-bottom">
+    <nav class = "navbar navbar-default">
       <ul class = "nav navbar-nav">
         <li>
           <a href = "https://www.facebook.com/ICANAZ?fref=ts">
