Adjusted Spanish button

--- a/OHack.html
+++ b/OHack.html
@@ -37,7 +37,7 @@
         <li id = "contactButton">
           <a href = "*">Contact Information</a>
         </li>
-        <li>
+        <li id = "spanishButton">
           <a href= "*">Español</a>
         </li>
         <li>
