--- a/OHack.html
+++ b/OHack.html
@@ -10,19 +10,13 @@
   <script src = "http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
   <div class = "container-fluid container">
-    <div class = "row">
-      <div class = "col-md-3 col-xs-6">
         <div class = "header">
           <img src="http://www.taohealingcenters.org/images/ican.jpg" alt="ICAN Logo"/>
         </div>
-        </div>
-        <div class = "col-md-4 col-xs-4">
         <div class="notificationBox">
           <p style = "font-size: 10px"> Notifications:
           </p>
         </div>
-      </div>
-      </div>
     <nav class = "navbar navbar-default">
       <ul class = "nav navbar-nav">
         <li id = "homeButton">
@@ -71,6 +65,7 @@ This is not an option for ICAN. We exist to combat these issues and build strong
     </a>
     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
     <nav class = "navbar navbar-default">
       <ul class = "nav navbar-nav">
         <li>
@@ -82,6 +77,17 @@ This is not an option for ICAN. We exist to combat these issues and build strong
           <a href = "https://twitter.com/icanchandler">
             <img src="http://www.ride24hr.com/uploads/twitter-icon2.png" alt="twitterThumbnail" style = "width: 50px; height: 50px;"/>
           </a>
+        </li>
+        <li>
+          <p>650 E. Morelos St.</p>
+          <p>Chandler, AZ, 85225</p>
+        </li>
+        <li>
+          <p>Tel: 480.821.4207</p>
+          <p>Fax: 480.821.6742</p>
+        </li>
+        <li>
+          <p>info@icanaz.org</p>
         </li>
       </ul>
     </nav>
