Changed Notification Box

--- a/OHack.html
+++ b/OHack.html
@@ -13,10 +13,7 @@
         <div class = "header">
           <img src="http://www.taohealingcenters.org/images/ican.jpg" alt="ICAN Logo"/>
         </div>
-        <div class="notificationBox">
-          <p style = "font-size: 10px"> Notifications:
-          </p>
-        </div>
+
     <nav class = "navbar navbar-default">
       <ul class = "nav navbar-nav">
         <li id = "homeButton">
@@ -50,8 +47,24 @@
       {{> alert}}
     {{/each}}
 
-
-    <p></p>
+    <div class="notificationBox">
+      <p style = "font-size: 10px"> Notifications:
+      </p>
+    </div>
+    <h3>Welcome Students and Parents!</h3>
+    <h4>On this website, you'll be able to access... </h4>
+    <ul>
+      <li>
+      <a href="*" style = "color: black;">  Any non-urgent news about the program </a>
+      </li>
+      <li>
+        <a href = "*" style = "color: black;"> Our Events Calendar </a>
+      </li>
+      <li>
+        <a href = "*" style = "color: black;"> Our Contact Information </a>
+      </li>
+    </ul>
+    <p><b> Who are we? </b></p>
     <p>ICAN goes beyond being just an after-school program for at-risk youth. ICAN works with youth on the critical skills they need to be productive and responsible members of the community.
     </p>
     <p>8 out of 10 young people in the areas we serve are living in extreme poverty. Four of those children will go to bed hungry at night and eight will be using drugs or alcohol to cope with the harsh realities they face. Joining gangs becomes a more viable choice than graduation in the community we serve.
