adjusting format of footer

--- a/OHack.html
+++ b/OHack.html
@@ -31,7 +31,7 @@
         <li id = "spanishButton">
           <a href= "*">Español</a>
         </li>
-        <li>
+        <li id = "login-buttonButton">
           {{> loginButtons}}
         </li>
       </ul>
@@ -79,7 +79,7 @@ This is not an option for ICAN. We exist to combat these issues and build strong
     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
     <nav class = "navbar navbar-default">
-      <ul class = "nav navbar-nav">
+      <ul class = "nav navbar-nav footer">
         <li>
           <a href = "https://www.facebook.com/ICANAZ?fref=ts">
             <img src="https://cdn0.iconfinder.com/data/icons/social-flat-rounded-rects/512/facebook-256.png" alt="facebookThumbnail" style = "width: 50px; height: 50px;"/>
@@ -91,8 +91,7 @@ This is not an option for ICAN. We exist to combat these issues and build strong
           </a>
         </li>
         <li>
-          <p>650 E. Morelos St.</p>
-          <p>Chandler, AZ, 85225</p>
+          <p>650 E. Morelos St. Chandler, AZ, 85225</p>
         </li>
         <li>
           <p>Tel: 480.821.4207</p>
