--- a/OHack.html
+++ b/OHack.html
@@ -70,6 +70,8 @@
     <p>8 out of 10 young people in the areas we serve are living in extreme poverty. Four of those children will go to bed hungry at night and eight will be using drugs or alcohol to cope with the harsh realities they face. Joining gangs becomes a more viable choice than graduation in the community we serve.
 This is not an option for ICAN. We exist to combat these issues and build strong futures for them and for our community.
     </p>
+    <div class = "row">
+    <div class = "twitterWidget col-xs-6 col-md-6">
     <a class="twitter-timeline" href="https://twitter.com/ICANChandler"
      data-widget-id="653046356978741248"
      width="250">
@@ -77,7 +79,11 @@ This is not an option for ICAN. We exist to combat these issues and build strong
     </a>
     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+  </div>
+    <div class = "calendarWidget col-xs-6 col-md-6">
 
+    </div>
+</div>
     <nav class = "navbar navbar-default">
       <ul class = "nav navbar-nav footer">
         <li>
