added Google Calender embed

--- a/OHack.html
+++ b/OHack.html
@@ -71,6 +71,11 @@
 This is not an option for ICAN. We exist to combat these issues and build strong futures for them and for our community.
     </p>
     <div class = "row">
+      <div class = "calendarWidget col-xs-6 col-md-6">
+        <iframe src="https://www.google.com/calendar/embed?title=ICANAZ&amp;mode=AGENDA&amp;height=350&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=6rt9e4nd0s5j50hqbedevdj3i8%40group.calendar.google.com&amp;color=%23853104&amp;ctz=America%2FLos_Angeles"
+         style=" border:solid 1px #777 " frameborder="0" scrolling="yes">
+       </iframe>
+      </div>
     <div class = "twitterWidget col-xs-6 col-md-6">
     <a class="twitter-timeline" href="https://twitter.com/ICANChandler"
      data-widget-id="653046356978741248"
@@ -80,9 +85,6 @@ This is not an option for ICAN. We exist to combat these issues and build strong
     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
   </div>
-    <div class = "calendarWidget col-xs-6 col-md-6">
-
-    </div>
 </div>
     <nav class = "navbar navbar-default">
       <ul class = "nav navbar-nav footer">
@@ -107,7 +109,7 @@ This is not an option for ICAN. We exist to combat these issues and build strong
           </a>
         </li>
         <li>
-          <p>650 E. Morelos St. Chandler, AZ, 85225</p>
+          <p>Location:   650 E. Morelos St. Chandler, AZ, 85225</p>
         </li>
         <li>
           <p>Tel: 480.821.4207</p>
