Adjusted formatting of Google Calendar

--- a/OHack.html
+++ b/OHack.html
@@ -74,12 +74,12 @@
       This is not an option for ICAN. We exist to combat these issues and build strong futures for them and for our community.
     </p>
     <div class = "row">
-      <div class = "calendarWidget col-xs-6 col-md-6">
+      <div class = "calendarWidget col-xs-12 col-md-6">
         <iframe src="https://www.google.com/calendar/embed?title=ICANAZ&amp;mode=AGENDA&amp;height=350&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=6rt9e4nd0s5j50hqbedevdj3i8%40group.calendar.google.com&amp;color=%23853104&amp;ctz=America%2FLos_Angeles"
-         style=" border:solid 1px #777 " frameborder="0" scrolling="yes">
+         style=" border:solid 1px #777; " frameborder="0" scrolling="yes" width = "275" height = "270">
        </iframe>
       </div>
-    <div class = "twitterWidget col-xs-6 col-md-6">
+    <div class = "twitterWidget col-xs-8 col-md-6">
     <a class="twitter-timeline" href="https://twitter.com/ICANChandler"
      data-widget-id="653046356978741248"
      width="250">
